# mural-worker-ai

./: Dockerfile  README.md  docker-compose.yml  flake.nix  pyproject.toml
app/: main.py
